# glplay

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  glplay.code-workspace
01_first_window/: 01_first_window.cpp
cmake/: FindDRM.cmake  FindOpenGLES.cmake  FindOpenGLES2.cmake  FindOpenGLES3.cmake
glplay/: DisplayAdapter.cpp  DisplayAdapter.h  glplay.cpp  main.cpp
scripts/: build.sh  launchRemoteGDB.sh
src/: DisplayAdapter.cpp  DisplayAdapter.hpp  main.cpp
src/drm/: Connector.cpp  Connector.hpp  Crtc.cpp  Crtc.hpp  Encoder.cpp  Encoder.hpp  Plane.cpp  Plane.hpp  PlaneResources.cpp  PlaneResources.hpp  PropertyInfo.hpp  Resources.cpp  Resources.hpp  drm.hpp
src/egl/: EGLDevice.cpp  EGLDevice.hpp  egl.hpp  utils.hpp
src/gbm/: GBMDevice.hpp  gbm.hpp
src/glplay/: main.cpp
src/kms/: Buffer.hpp  Display.cpp  Display.hpp  DisplayAdapter.cpp  DisplayAdapter.hpp  Edid.cpp  Edid.hpp  kms.hpp  time.hpp
src/nix/: FileDescriptor.cpp  FileDescriptor.hpp  VirtualTerminal.hpp  log.hpp  nix.hpp  terminal.hpp
